test/operator/add_bool_string.lox
true + "s" // error: binary operation only allowed between ints or floats
